--- a/global_settings.yml
+++ b/global_settings.yml
@@ -6,6 +6,8 @@ overrides:
     "xmla.auth.token.enabled" : True
     "xmla.discover.properties.daxdialect": tabular1600
     "xmla.cube.lastDataUpdate.enabled": True
+    "query.cache.eviction.sizeLimit" : 0
+
 manually_added_hidden_overrides:
     "query.includeComments.general.queryId" : True
     "query.includeComments.general.userId" : True
